--- a/src/1-Consumer/RabbitMQ.BackgroundServices.Worker/RabbitMQ.BackgroundServices.Worker.csproj
+++ b/src/1-Consumer/RabbitMQ.BackgroundServices.Worker/RabbitMQ.BackgroundServices.Worker.csproj
@@ -22,7 +22,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\RabbitMQ.Infra.CrossCutting.IoC\RabbitMQ.Infra.CrossCutting.IoC.csproj" />
+	  <ProjectReference Include="..\..\Infra\RabbitMQ.Infra.CrossCutting.IoC\RabbitMQ.Infra.CrossCutting.IoC.csproj" />
 	</ItemGroup>
 	
 </Project>
