chore: message and appsettings configuration

--- a/src/RabbitMQ.BackgroundServices.Worker/appsettings.json
+++ b/src/RabbitMQ.BackgroundServices.Worker/appsettings.json
@@ -9,12 +9,16 @@
   },
   "RabbitConfig": {
     "HostName": "localhost",
-    "Port": 15672,
+    "Port": 5672,
     "UserName": "guest",
     "Password": "guest",
     "VirtualHost": "/",
-    "ConsumerQueue": "sample.consumer",
-    "ConsumerExchangeQueue": "sample.consumer-exchange",
-    "TimeToLiveInMilisseconds": 5000
+    "ConsumingQueue": "sample.consumer",
+    "ConsumingExchangeQueue": "sample.consumer-exchange",
+    "WaitQueue": "sample.wait",
+    "WaitExchangeQueue": "sample.wait-exchange",
+    "DeadLetterExchangeQueue": "sample.deadletter",
+    "DeadLetterQueue": "sample.deadletter-exchange",
+    "TimeToLiveInMilisseconds": 10000
   }
 }
