feat: include headers properties

--- a/src/1-Consumer/RabbitMQ.BackgroundServices.Worker/RabbitMQ.BackgroundServices.Worker.csproj
+++ b/src/1-Consumer/RabbitMQ.BackgroundServices.Worker/RabbitMQ.BackgroundServices.Worker.csproj
@@ -2,7 +2,7 @@
 
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
-		<TargetFramework>net5.0</TargetFramework>
+		<TargetFramework>net6.0</TargetFramework>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -23,6 +23,7 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\..\Infra\RabbitMQ.Infra.CrossCutting.IoC\RabbitMQ.Infra.CrossCutting.IoC.csproj" />
+	  <ProjectReference Include="..\..\RabbitMQ.Domain\RabbitMQ.Domain.csproj" />
 	</ItemGroup>
 	
 </Project>
